# DoutorMartelo

./: .clasp.json  .gitignore  CLAUDE.md  Ficheiro Central (9).xlsx  REGRAS_DE_NEGOCIO.md  index.html  main.gs  package-lock.json  package.json  temp.js  tmpclaude-0370-cwd
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/ops/: Install-MaterialsBackofficeService.ps1  Run-MaterialsBackoffice.ps1  Sync-SheetsToSupabase.ps1  Update-MaterialsBackoffice.ps1
backend/scripts/: backfill_consumo_movement_totals.py  check_integrations.py  diagnose_stock_movement_duplicates.py  rebuild_stock_atual.py  seed_material_references.py  sync_sheets_to_supabase.py
backend/sql/: 001_materials_backoffice.sql  002_align_materials_backoffice_schema.sql  003_split_material_catalog_references.sql  004_extend_materials_payment_and_fuel_schema.sql  005_add_compromissos_obra.sql  006_add_notas_credito_support.sql  007_create_pessoal_efetivo.sql  008_create_operational_sync_tables.sql  009_align_manual_sync_schema.sql  010_create_dashboard_runtime_sync_tables.sql  011_align_dashboard_supabase_read_contract.sql  012_add_pessoal_efetivo_photo_url.sql  013_create_veiculos_sync.sql  014_add_foto_url_to_faturas.sql
backend/tests/: test_api.py  test_consumo_movement_backfill.py  test_live_google_sheets_adapter.py  test_operational_serving.py  test_reference_seeding.py  test_sheet_hydration.py  test_stock_afetacao_reconciliation.py  test_stock_atual_rebuild.py  test_stock_movement_duplicate_diagnostics.py  test_supplier_options.py
(+72 files in other folders)
