[project]
name = "materials-backoffice"
version = "0.1.0"
description = "FastAPI backoffice and sync bridge for materials, invoices, and stock flows."
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "pydantic>=2.11.0",
  "httpx>=0.28.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

